// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FillProgress/> handles more than 100% correctly 1`] = `
<DocumentFragment>
  <div
    class="bar bar-sm"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="110"
      class="bg-error"
      data-testid="bar-element"
      role="progressbar"
      style="width: 110%;"
    />
  </div>
  <div
    class="toast toast-error"
    data-testid="toast-element"
  >
    The volume of the items exceeds the volume of the container(s). The packing algorithm will not be run.
  </div>
</DocumentFragment>
`;

exports[`<FillProgress/> renders and displays correctly 1`] = `
<DocumentFragment>
  <div
    class="bar bar-sm"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="90"
      class=""
      data-testid="bar-element"
      role="progressbar"
      style="width: 90%;"
    />
  </div>
</DocumentFragment>
`;
